<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/base_de_cambio"
                    android:textSize="30sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eur"
                        android:textSize="36sp" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usd"
                        android:textSize="36sp"/>
                </RadioGroup>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:padding="5dp"
                    android:text="@string/tipos_de_cambios_hoy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/flag1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:src="@drawable/icons8_cad"/>

                    <TextView
                        android:id="@+id/text3"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/cad"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/valueCad"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="0000"
                        android:textSize="20sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/flag2"
                        android:layout_width="wrap_content"
                        android:padding="5dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_gpb"/>

                    <TextView
                        android:id="@+id/text4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/gbp"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/valueGbp"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="0000"
                        android:textSize="20sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/flag3"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icons8_mxn"/>

                    <TextView
                        android:id="@+id/text5"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/mxn"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/valueMxn"
                        android:padding="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="0000"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/text6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:textSize="30sp"
                    android:text="@string/girando" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <ImageView
                        android:id="@+id/base"
                        android:layout_height="100dp"
                        android:layout_width="150dp"
                        app:srcCompat="@android:drawable/progress_horizontal"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/arrow_left"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignEnd="@+id/base"
                        android:layout_alignRight="@+id/base"
                        android:layout_alignBottom="@+id/base"
                        android:layout_alignTop="@+id/base"
                        android:layout_alignStart="@+id/base"
                        app:srcCompat="@drawable/icons8_left_arrow"
                        android:layout_alignLeft="@+id/base" />

                    <ImageView
                        android:id="@+id/arrow_right"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignStart="@+id/base"
                        android:layout_alignLeft="@+id/base"
                        android:layout_alignTop="@+id/base"
                        android:layout_alignEnd="@+id/base"
                        android:layout_alignRight="@+id/base"
                        android:layout_alignBottom="@+id/base"
                        android:visibility="gone"
                        app:srcCompat="@drawable/icons8_right_arrow" />

                </RelativeLayout>



            </LinearLayout>
    </ScrollView>




</LinearLayout>